[gd_scene load_steps=7 format=2]

[ext_resource path="res://Login Screen.gd" type="Script" id=1]
[ext_resource path="res://WebsocketClient.tscn" type="PackedScene" id=2]
[ext_resource path="res://Spinner.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id=2]
resource_name = "Spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/SpinnerTexture:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/icon.png-487276ed1e3a0c39cad0279d744ee560.stex"

[node name="LoginScreen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 240.0
margin_bottom = 400.0

[node name="TitlebarContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 28.0

[node name="Title" type="Label" parent="VBoxContainer/TitlebarContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 233.0
margin_bottom = 21.0
text = "Login Screen"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 240.0
margin_bottom = 214.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ContentVBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 172.0
custom_constants/separation = 10

[node name="InputFormContainer" type="GridContainer" parent="VBoxContainer/MarginContainer/ContentVBoxContainer"]
margin_right = 220.0
margin_bottom = 53.0
custom_constants/vseparation = 5
custom_constants/hseparation = 10
columns = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer/MarginContainer/ContentVBoxContainer/InputFormContainer"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username:"

[node name="UsernameEntry" type="LineEdit" parent="VBoxContainer/MarginContainer/ContentVBoxContainer/InputFormContainer"]
margin_left = 80.0
margin_right = 220.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="Label" parent="VBoxContainer/MarginContainer/ContentVBoxContainer/InputFormContainer"]
margin_top = 34.0
margin_right = 70.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password:"

[node name="PasswordEntry" type="LineEdit" parent="VBoxContainer/MarginContainer/ContentVBoxContainer/InputFormContainer"]
margin_left = 80.0
margin_top = 29.0
margin_right = 220.0
margin_bottom = 53.0
size_flags_horizontal = 3
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="VBoxContainer/MarginContainer/ContentVBoxContainer"]
visible = false
margin_top = 63.0
margin_right = 220.0
margin_bottom = 77.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1

[node name="Spinner" type="CenterContainer" parent="VBoxContainer/MarginContainer/ContentVBoxContainer"]
visible = false
margin_top = 63.0
margin_right = 220.0
margin_bottom = 162.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="SpinnerAnimation" type="AnimationPlayer" parent="VBoxContainer/MarginContainer/ContentVBoxContainer/Spinner"]
anims/Spin = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/ContentVBoxContainer/Spinner"]
margin_left = 75.0
margin_top = 14.0
margin_right = 145.0
margin_bottom = 84.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="SpinnerTexture" type="TextureRect" parent="VBoxContainer/MarginContainer/ContentVBoxContainer/Spinner/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource( 3 )
expand = true

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 218.0
margin_right = 240.0
margin_bottom = 400.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="LoginButtonContainer" type="CenterContainer" parent="VBoxContainer/ButtonContainer"]
margin_right = 240.0
margin_bottom = 20.0

[node name="LoginButton" type="Button" parent="VBoxContainer/ButtonContainer/LoginButtonContainer"]
margin_left = 97.0
margin_right = 143.0
margin_bottom = 20.0
text = "Login"

[node name="QuitButtonContainer" type="CenterContainer" parent="VBoxContainer/ButtonContainer"]
margin_top = 30.0
margin_right = 240.0
margin_bottom = 50.0

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonContainer/QuitButtonContainer"]
margin_left = 100.0
margin_right = 140.0
margin_bottom = 20.0
text = "Quit"

[node name="WebsocketClient" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/LoginButtonContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/QuitButtonContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="data_received" from="WebsocketClient" to="." method="_on_WebsocketClient_data_received"]
